# OpenGL_PlayGround

./: .gitattributes  CMakeLists.txt  README.md  main.c
.cache/clangd/index/: glad.c.8DF1DA5798B73BE0.idx  glad.c.F987706D7E44A41A.idx  glad.h.1B276B26563DC4FF.idx  glad.h.AD99334DF9F8A732.idx  glfw3.h.11E3B436D202305D.idx  glfw3.h.E4EE6F781EBA3063.idx  index_buffer.cpp.7C944FBE54295A0D.idx  index_buffer.h.EC3F325D53B4904F.idx  khrplatform.h.8AA447AF7308AE17.idx  khrplatform.h.AE30BE5C70C04E59.idx  main.c.A05336666608734D.idx  main.cpp.8F19A6791AC35050.idx  stb_image.cpp.609EA74E6E3148EC.idx  stb_image.h.55DA40D55391A4BE.idx  vertex_array.cpp.5382D2FDB356F192.idx  vertex_array.h.03C99C2B5F6434C8.idx  vertex_buffer.cpp.E9DC4029CB033FF2.idx  vertex_buffer.h.40AF7BFA90A0CE1C.idx  window.cpp.B755A896112981BC.idx  window.h.947AF7C1B32402E7.idx
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Dependencies/glfw-3.3.8/install/lib/pkgconfig/: glfw3.pc
Dependencies/stb/: CMakeLists.txt
Include/: CMakeLists.txt
Src/: index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp
